<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/textview_newtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:textSize="@dimen/TextSize_25sp"
        android:text="@string/enter_task_title"/>
    <EditText
        android:id="@+id/edittext_newtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_title"
        android:inputType="text"
        android:hint="@string/task_title_hint"
        style="@style/PlainTextBox"/>

    <TextView
        android:id="@+id/textview_newtask_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_title"
        android:textSize="@dimen/TextSize_25sp"
        android:text="@string/enter_task_summary"/>
    <EditText
        android:id="@+id/edittext_newtask_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_summary"
        android:inputType="text"
        android:hint="@string/task_summary_hint"
        style="@style/PlainTextBox"/>
    <TextView
        android:id="@+id/textview_newtask_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_summary"
        android:textSize="@dimen/TextSize_25sp"
        android:text="@string/TextView_task_importance"/>
    <EditText
        android:id="@+id/edittext_newtask_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_importance"
        android:inputType="number"
        android:hint="@string/number1_hint"
        style="@style/PlainTextBox"/>
    <Button
        android:id="@+id/button_newtask_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_importance"
        android:layout_centerHorizontal="true"
        android:text="@string/newtask_savetask"
        android:textAllCaps="false"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/TextSize_25sp"
        android:layout_below="@id/button_newtask_save">
        <TextView
            android:id="@+id/textview_newtask_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_tasks_to_show"/>
    </ScrollView>
</RelativeLayout>